day07/solutions/pay-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pay
  template:
    metadata:
      labels:
        app: pay
    spec:
      containers:
      - name: pay
        image: hashicorp/http-echo
        args:
        - "-text=Hello from pay"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: pay
spec:
  selector:
    app: pay
  ports:
  - port: 80
    targetPort: 5678
