day07/solutions/pay-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pay-route
spec:
  parentRefs:
  - name: shop-gateway
  hostnames:
  - pay.gw.local
  rules:
  - backendRefs:
    - name: pay
      port: 80
